# fastapi-12-05-testing

./: Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  recipes.db
migrations/: env.py
migrations/versions/: 3342b4899af9_added_recipes_to_user_model.py  60be0cd8dbc8_added_to_recipe_user_id.py  761c42a22f70_added_is_active_column_to_user.py  9444bf542f70_user_model.py  afca637bb849_user_model.py  e8b5f9e26eb4_initial_db_structure.py
src/: schemas.py
src/database/: database.py  models.py
src/repository/: ingredients.py  recipes.py  unit_quantity.py  units.py  users.py
src/route/: auth.py  email.py  ingredients.py  recipes.py
src/service/: auth.py  email.py  ingredients.py  recipes.py  unit_quantity.py  units.py
tests/: conftest.py
tests/repository/: unit_tests_recipes.py
tests/route/: test_e2e_recipes_route_.py
